syntax = "proto3";

package example;
option go_package ="github.com/webws/go-moda/example/pb/example";

service ExampleService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
